# microtorch

./: .gitignore  LICENSE  README.md  acquisition_scheme.py  fit.py  generate_utils.py  make_test_image.py  model.pth  model_maker.py  net_maker.py  pyproject.toml  requirements.txt  run_fit.bat  signal_models.py  ssFit.py  testbed.py  train.py  try_acq_scheme.ipynb
contributor_folders/: README
contributor_folders/cubric_contributions/: batch_fit.py  gather_wand_data.py  slurm_job.sh
core/: acquisition_scheme.py  dataset.py  preprocessing.py  torch_blocks.py
cubric_contributions/: batch_fit.py  casefwork.py  gather.py  gather_wand_data.py
data/: dataset.py  load_data.py
docs/: getting_started.md  index.md
docs/usage/: cli.md  (+3 more)
examples/: BallStickDemo.ipynb  BallStickDemo_2.ipynb  Batch_Fit.ipynb  fit.ipynb  notebook_setup.py  plot_test_images.ipynb  plot_test_networks.ipynb  test_all_compartments.ipynb  test_networks.ipynb
loss_functions/: RicianLoss.py
messy_examples/: ball_stick_example.ipynb  deep-dk-example.ipynb  nexi_example.ipynb  simulated_data.ipynb
microtorch/: __init__.py  fit.py  make_test_image.py  model_maker.py  signal_models.py  testbed.py  torch_blocks.py  train.py
model_code/: model_maker.py  net_maker.py  signal_models.py  torch_blocks.py
notebooks/: BallStickDemo_2.ipynb
scripts/: create_all_test_images.py  test_networks.py
src/: fit.py  main.py  model_maker.py  net_maker.py  run_fit.py  train.py
tests/: test_acquisition_scheme.py  test_model_maker.py
utils/: params.py  preprocessing.py  util_function.py  utils_wm.py
(+124 files in other folders)
