[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microtorch"
version = "0.1.0"
description = "Diffusion MRI Model Fitting with PyTorch"
requires-python = ">=3.9"

dependencies = [
  "torch",
  "numpy",
  "nibabel",
  "tqdm",
  "scipy",
  "matplotlib",
  "torchmetrics",
  "optuna",
  "hydra-core",
  "jupyter"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

